fixed profile image

--- a/pages/index.html
+++ b/pages/index.html
@@ -81,7 +81,7 @@
     <p>The genie is very busy but least he had time to develop this smart AI to continue supporting those in need of help</p>
     <section class="profile-img">
     <a href="https:twitter.com/Kevstar0">
-    <img class="profile-img" src="https://pbs.twimg.com/profile_images/1339076742212882432/X3kOKwKn_200x200.jpg" alt="Kevstar0 profile picture from Twitter"
+    <img class="profile-img" src="../pages/images/X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
       /></a></section>
     </section>
     <p class="body">
