executable with live server

--- a/pages/index.html
+++ b/pages/index.html
@@ -75,10 +75,10 @@
   </head>
   <body class="design" class="bottom"><section>
     <h1 id="master">Hello
-      <em class="bold"> "User"</em>
+      <em class="bold"> "friend"</em>
     </h1>
     <p>Welcome to the genie of wishes</p>
-    <p>The genie is very busy but least he had time to develop this smart AI to continue supporting those in need of help</p>
+    <p>My name is Kevin/ The genie, I am likely to be very busy but my robot will represent me to always be available for loved ones</p>
     <section class="profile-img">
     <a href="https:twitter.com/Kevstar0">
     <img class="profile-img" src="../pages/images/X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
