--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Kevstar" />
     <meta name="description" content="Best AI" />
-    <title>Pablo</title>
+    <title>Kevin</title>
     <style>
       .bold {
         font-weight: bold;
@@ -75,13 +75,13 @@
   </head>
   <body class="design" class="bottom"><section>
     <h1 id="master">Hello
-      <em class="bold"> "friend"</em>
+      <em class="bold"> friend</em>
     </h1>
     <p>Welcome to the genie of wishes</p>
     <p>My name is Kevin/ The genie, I am likely to be very busy but my robot will represent me to always be available for loved ones</p>
     <section class="profile-img">
     <a href="https:twitter.com/Kevstar0">
-    <img class="profile-img" src="../pages/X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
+    <img class="profile-img" src="../X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
       /></a></section>
     </section>
     <p class="body">
