--- a/pages/index.html
+++ b/pages/index.html
@@ -81,7 +81,7 @@
     <p>My name is Kevin/ The genie, I am likely to be very busy but my robot will represent me to always be available for loved ones</p>
     <section class="profile-img">
     <a href="https:twitter.com/Kevstar0">
-    <img class="profile-img" src="../X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
+    <img class="profile-img" src="../pages/images/X3kOKwKn_400x400.jpg" alt="Kevstar0 profile picture from Twitter"
       /></a></section>
     </section>
     <p class="body">
