--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
       <input type="password" name="password" placeholder="Password" /><br />
 
       <a href="signpage.html" class="ca">Create an account</a
-      ><button type="submit">Login</button>
+      ><button type="submit"><a href="index.html">Login</a></button>
     </form>
   </body>
 </html>
