fixed ewallet page

--- a/pages/about.html
+++ b/pages/about.html
@@ -84,7 +84,7 @@
       <button><a href="#">Free movies</button>
       <button><a href="https://mp3juices.cc">Free music</button>
       <button><a href="#">Research</button>
-      <button><a href="../Kvstr-AI/ewallet.html">Finances</button>
+      <button><a href="./ewallet.html">Finances</button>
       <button><a href="https://maps.google.com/maps">Where to go?</button>
       <button><a href="./wish.html">Other</button>
     </section>
