updated nav icons

--- a/pages/about.html
+++ b/pages/about.html
@@ -42,9 +42,9 @@
     <section>
       <div class="nav">
         <li><a href="./assistant.html">Esc</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./settings.html">Settings</a></li>
-        <li><a href="./su.html">Superuser</a></li>
+        <li><a href="./about.html"><img src="../pages/images/" alt=""/></a></li>
+        <li><a href="./settings.html"><img src="../pages/images/settings.png" alt="cog wheel icon"/></a></li>
+        <li><a href="./su.html"><img src="../pages/images/vip.png" alt="vip icon"/></a></li>
       </div>
     </section>
     <div><h1 align="center">Offered services</h1>
