--- a/pages/index.html
+++ b/pages/index.html
@@ -66,10 +66,10 @@
       }
     </style>
     <section><div class="nav">
-    <li><a href="#master">Home</a></li>
-    <li><a href="./about.html">About</a></li>
-    <li><a href="./settings.html">Settings</a></li>
-    <li><a href="./su.html">VIP</a></li>
+    <li><a href="#master"><img src="../pages/images/home.png" alt=""/></a></li>
+    <li><a href="./about.html"><img src="../pages/images/" alt=""/></a></li>
+    <li><a href="./settings.html"><img src="../pages/images/settings.png" alt=""/></a></li>
+    <li><a href="./su.html"><img src="../pages/images/vip.png" alt=""/></a></li>
 </div>
 </section>
   </head>
