added terms & conditions

--- a/pages/login.html
+++ b/pages/login.html
@@ -13,6 +13,8 @@
       <label>Password</label>
       <input type="password" name="password" placeholder="Password" /><br />
 
+      <p>by logging you accept to my terms & conditions of usage</p>
+
       <a href="signpage.html" class="ca">Create an account</a
       ><button type="submit"><a href="index.html">Login</a></button>
     </form>
