--- a/pages/register.html
+++ b/pages/register.html
@@ -37,6 +37,9 @@
         /><br />
       </section>
 
+      <p>by registering you accept to my terms & conditions of usage</p>
+      <p>Privacy is a top priority so feel safe your data is secure</p>
+
       <button type="submit">Sign Up</button>
       <a href="loginpage.html" class="ca">Already have an account?</a>
     </form>
