--- a/pages/register.html
+++ b/pages/register.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>SIGN UP</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Kevstar" />
+    <meta name="description" content="Login page" />
+    <title>Login</title>
     <style>
-      .form-layout {
-        align: center;
+      .design {
+        background-color: rgb(99, 12, 31);
+        color: #ffffff;
+        text-align: center;
+      }
+      .body {
+        color: #ffffff;
+      }
+      .nav {
+        color: rgb(119, 128, 0);
+        background-color: #ff4500;
+        border: 2px solid yellow;
+        border-bottom: 1px solid yellow;
+        list-style-type: none;
+        text-align: left;
+        padding-left: 20px;
+        justify-content: space-between;
+        list-style: none;
+        display: flex;
       }
     </style>
-  </head>
+    <section>
+      <div class="nav">
+        <li><a href="#master">home</a></li>
+        <li><a href="./about.html">about</a></li>
+        <li><a href="./settings.html">settings</a></li>
+        <li><a href="./su.html">VIP</a></li>
+      </div>
+    </section>
   <body>
     <form action="signup-check.php" method="post">
       <h2 align="center">SIGN UP</h2>
