updated login T's and C's

--- a/pages/login.html
+++ b/pages/login.html
@@ -13,6 +13,9 @@
       <label>Password</label>
       <input type="password" name="password" placeholder="Password" /><br />
 
+      <p>by login you accept to my terms & conditions of usage</p>
+      <p>Privacy is a top priority so feel safe your data is secure</p>
+
       <a href="signpage.html" class="ca">Create an account</a
       ><button type="submit">Login</button>
     </form>
