--- a/pages/Home.html
+++ b/pages/Home.html
@@ -27,7 +27,7 @@
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
   </head>
-  <body data-home-page="https://website445319.nicepage.io/Home.html?version=69a5efd3-43b3-49e8-953f-c1ff125a097d" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-a427"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-a427"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
