added shortened link

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -9,6 +9,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Home.css" media="screen" />
+    <link a href="bit.ly/kevstar0" />
     <script
       class="u-script"
       type="text/javascript"
