updates home page headline and paragraph

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -9,7 +9,6 @@
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="Home.css" media="screen" />
-    <link a href="bit.ly/kevstar0" />
     <script
       class="u-script"
       type="text/javascript"
@@ -229,9 +228,10 @@
         What Does it do?
       </h1>
       <p class="u-text u-text-2">
-        Summon any internet services or order food online or even command your
-        device to open a specific app/ webpage. if the app is not available
-        it'll ask you if it should download & install it for you!
+        Summon any internet services, order food online, research or even
+        command your device to open a specific app/ webpage. if the app is not
+        available on your device or our database it'll ask you if it should
+        search for it, download & install it for you!
         <a
           href="https://nicepage.com/c/shapes-website-templates"
           class="
@@ -246,11 +246,9 @@
             u-text-body-color
             u-btn-1
           "
-          >quisque egestas</a
-        >. Viverra adipiscing at in tellus integer.&nbsp;Est pellentesque elit
-        ullamcorper dignissim cras tincidunt lobortis. Mattis enim ut tellus
-        elementum sagittis. Aliquam ut porttitor leo a diam sollicitudin tempor
-        id eu.<br />
+          >It is worth it. Try it!</a
+        >. With the power of HTML5 & CSS these 2 combined language allows me to
+        service you and simultaneiously entertain you! how cool.<br />
         <br />Image from
         <a
           href="https://freepik.com/photos/people"
@@ -266,7 +264,7 @@
             u-text-body-color
             u-btn-2
           "
-          >Freepik</a
+          >Kevin's image choices</a
         >
         <br />
       </p>
