fixed tempting button

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -233,7 +233,7 @@
         available on your device or our database it'll ask you if it should
         search for it, download & install it for you!
         <a
-          href="https://nicepage.com/c/shapes-website-templates"
+          href="./services.html"
           class="
             u-border-1
             u-border-active-palette-2-light-3
