--- a/pages/Home.html
+++ b/pages/Home.html
@@ -180,7 +180,7 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html"
+                    <a class="u-button-style u-nav-link" href="./Home.html"
                       >Home</a
                     >
                   </li>
@@ -190,17 +190,17 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Contact.html"
+                    <a class="u-button-style u-nav-link" href="./Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="services.html"
+                    <a class="u-button-style u-nav-link" href="./services.html"
                       >services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Shop.html"
+                    <a class="u-button-style u-nav-link" href="./Shop.html"
                       >Shop</a
                     >
                   </li>
