--- a/pages/Home.html
+++ b/pages/Home.html
@@ -102,7 +102,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Home.html"
+                  href="./Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -115,7 +115,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="About.html"
+                  href="./About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -128,7 +128,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Contact.html"
+                  href="./Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -141,7 +141,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="services.html"
+                  href="./services.html"
                   style="padding: 10px 20px"
                   >services</a
                 >
@@ -154,7 +154,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Shop.html"
+                  href="./Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
