removed trademarks of third party

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -185,7 +185,7 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="About.html"
+                    <a class="u-button-style u-nav-link" href="./About.html"
                       >About</a
                     >
                   </li>
@@ -605,12 +605,14 @@
                   u-size-17
                   u-layout-cell-2
                 "
-                data-href="http://youtube.com"
+                data-href=" --#--"
               >
+                <input type="file" accept="audio/*" capture />
+
                 <div class="u-container-layout u-container-layout-2">
                   <span
                     class="u-icon u-icon-circle u-text-palette-1-base u-icon-1"
-                    data-href="https://youtube.com"
+                    data-href="--#--"
                     ><svg
                       class="u-svg-link"
                       preserveAspectRatio="xMidYMin slice"
@@ -672,20 +674,6 @@
     >
       <div class="u-clearfix u-sheet u-sheet-1"></div>
     </footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a
-        class="u-link"
-        href="https://nicepage.com/website-templates"
-        target="_blank"
-      >
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span> </a
-      >.
-    </section>
+    <section class="u-backlink u-clearfix u-grey-80"></section>
   </body>
 </html>
