--- a/pages/services.html
+++ b/pages/services.html
@@ -188,15 +188,6 @@
     
     <footer class="u-align-left u-clearfix u-footer u-grey-80 u-footer" id="sec-e226"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/templates" target="_blank">
-        <span>Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/wysiwyg-html-editor" target="_blank">
-        <span>Free WYSIWYG HTML Editor</span>
-      </a>. 
-    </section>
+      <section class="u-backlink u-clearfix u-grey-80"></section>
   </body>
 </html>
