--- a/pages/Home.html
+++ b/pages/Home.html
@@ -228,10 +228,13 @@
         What Does it do?
       </h1>
       <p class="u-text u-text-2">
-        Summon any internet services, order food online, research or even
-        command your device to open a specific app/ webpage. if the app is not
-        available on your device or our database it'll ask you if it should
-        search for it, download & install it for you!
+        I am probably one of the laziest people on earth, I love enjoying my
+        music and just being lazy while i code away/ binge anime. so i made this
+        website which i personally use whenever i have to do something, summon
+        any internet services, order food online, research or even command your
+        device to open a specific app/ webpage. if the app is not available on
+        your device or our database it'll ask you if it should search for it,
+        download & install it for you!
         <a
           href="./services.html"
           class="
