added logo all pages

--- a/pages/Shop.html
+++ b/pages/Shop.html
@@ -51,9 +51,9 @@
   <body class="u-body u-overlap">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
+        <a href="./Home.html" class="u-image u-logo u-image-1">
           <img
-            src="images/default-logo.png"
+            src="../pages/images/logo.png"
             class="u-logo-image u-logo-image-1"
           />
         </a>
