--- a/pages/services.html
+++ b/pages/services.html
@@ -29,8 +29,8 @@
     <meta name="theme-color" content="#478ac9">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-a427"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-          <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
+        <a href="./Home.html" class="u-image u-logo u-image-1">
+          <img src="../pages/images/logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
