--- a/pages/Home.html
+++ b/pages/Home.html
@@ -140,7 +140,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./services.html"
+                  href="./Services.html"
                   style="padding: 10px 20px"
                   >services</a
                 >
