--- a/pages/Home.html
+++ b/pages/Home.html
@@ -228,12 +228,12 @@
       </h1>
       <p class="u-text u-text-2">
         I am probably one of the laziest people on earth, I love enjoying my
-        music and just being lazy while i code away/ binge anime. so i made this
-        website which i personally use whenever i have to do something, summon
-        any internet services, order food online, research or even command your
-        device to open a specific app/ webpage. if the app is not available on
-        your device or our database it'll ask you if it should search for it,
-        download & install it for you!
+        time on coding, music and binge anime. so i made this website which I
+        personally use whenever I have to do something, summon any internet
+        services, order food online, research or even command your device to
+        open a specific app/ webpage. if the app is not available on your device
+        or our database it'll ask you if it should search for it, download &
+        install it for you!
         <a
           href="./services.html"
           class="
@@ -609,7 +609,8 @@
                 "
                 data-href=" --#--"
               >
-                <input type="file" accept="audio/*" capture />
+                <input type="file" accept="audio/*" capture /><br />
+                <p>Listen now</p>
 
                 <div class="u-container-layout u-container-layout-2">
                   <span
