--- a/pages/Home.html
+++ b/pages/Home.html
@@ -331,7 +331,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-4">Planning</h5>
+              <h5 class="u-text u-text-4">Smart houses</h5>
               <a
                 href="https://nicepage.com/c/product-list-html-templates"
                 class="
@@ -400,9 +400,9 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-6">Your Strategy</h5>
+              <h5 class="u-text u-text-6">Smart schools</h5>
               <a
-                href="https://nicepage.com/k/chart-html-templates"
+                href="./About.html"
                 class="
                   u-active-none
                   u-border-2
@@ -469,7 +469,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-8">Team Building</h5>
+              <h5 class="u-text u-text-8">AI driven country</h5>
               <a
                 href="https://nicepage.com/k/adult-html-templates"
                 class="
@@ -538,7 +538,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-10">Support</h5>
+              <h5 class="u-text u-text-10">Job oppotunities with us</h5>
               <a
                 href="https://nicepage.com/c/slider-html-templates"
                 class="
@@ -553,7 +553,7 @@
                   u-text-body-color
                   u-btn-6
                 "
-                >learn more</a
+                >browse</a
               >
             </div>
           </div>
@@ -591,7 +591,9 @@
                     u-container-layout u-valign-middle u-container-layout-1
                   "
                 >
-                  <h3 class="u-text u-text-1">Try the live AI<br /></h3>
+                  <h3 class="u-text u-text-1">
+                    Try the personal live AI<br />
+                  </h3>
                   <p class="u-text u-text-2">
                     I can get anything for you, just say your wish after
                     activating your mic with the mic button on the right<br />
@@ -609,7 +611,6 @@
                 "
                 data-href=" --#--"
               >
-                <input type="file" accept="audio/*" capture /><br />
                 <p>Listen now</p>
 
                 <div class="u-container-layout u-container-layout-2">
