--- a/pages/about.html
+++ b/pages/about.html
@@ -254,14 +254,11 @@
                     u-container-layout u-valign-middle u-container-layout-2
                   "
                 >
-                  <h2 class="u-text u-text-1">About me<br /></h2>
+                  <h2 class="u-text u-text-1">About Kevstar<br /></h2>
                   <p class="u-text u-text-2">
-                    Confident, sarcastic, focused, dedicated<br />just a few
-                    traits I have. I love coding... building websites and
-                    apps<br />automating my life so that i can have all the free
-                    time in the world. I created this AI to take care of tasks
-                    that i wouldnt be able to do at a given time interval and
-                    also give you a few extras. enjoy.<br />
+                    Focused into driving this world into an automated world<br />
+                    service delivery is a big factor for companies and
+                    productivity is just a dream when the "system is down"<br />.<br />
                   </p>
                   <a href="" class="u-btn u-button-style u-btn-1">Twitter</a>
                 </div>
