--- a/pages/Home.html
+++ b/pages/Home.html
@@ -44,6 +44,8 @@
     <meta property="og:type" content="website" />
     <meta name="theme-color" content="#478ac9" />
   </head>
+
+  // logo
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -53,6 +55,8 @@
             class="u-logo-image u-logo-image-1"
           />
         </a>
+
+        // drop down menu
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
             class="menu-collapse"
@@ -68,7 +72,7 @@
                 u-text-active-palette-1-base
                 u-text-hover-palette-2-base
               "
-              href="#"
+              href="./About.html"
               style="padding: 4px 14px; font-size: calc(1em + 8px)"
             >
               <svg><use xlink:href="#menu-hamburger"></use></svg>
@@ -94,6 +98,7 @@
           <div class="u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1">
               <li class="u-nav-item">
+                // home link
                 <a
                   class="
                     u-button-style
@@ -107,6 +112,7 @@
                 >
               </li>
               <li class="u-nav-item">
+                // about link
                 <a
                   class="
                     u-button-style
@@ -621,7 +627,6 @@
                       class="u-svg-link"
                       preserveAspectRatio="xMidYMin slice"
                       viewBox="0 0 512 512"
-                      style=""
                     >
                       <use xlink:href="#svg-4b29"></use></svg
                     ><svg
