--- a/pages/Home.html
+++ b/pages/Home.html
@@ -114,7 +114,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./About.html"
+                  href="https://kevstar0.github.io/About"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -184,7 +184,9 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./About.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="https://kevstar0.github.io/About"
                       >About</a
                     >
                   </li>
@@ -194,12 +196,14 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./services.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="https://kevstar0.github.io/Services.html"
                       >services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Shop.html"
+                    <a class="u-button-style u-nav-link" href="https://kevstar0.io/Shop.html"
                       >Shop</a
                     >
                   </li>
