--- a/pages/Home.html
+++ b/pages/Home.html
@@ -114,7 +114,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="https://kevstar0.github.io/About"
+                  href="http://kevstar0.github.io/About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -140,9 +140,9 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Services.html"
+                  href="http://kevstar0.io/Services.html"
                   style="padding: 10px 20px"
-                  >services</a
+                  >Services</a
                 >
               </li>
               <li class="u-nav-item">
@@ -153,7 +153,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Shop.html"
+                  href="http://kevstar0.io/Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -186,7 +186,7 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="https://kevstar0.github.io/About"
+                      href="http://kevstar0.github.io/About"
                       >About</a
                     >
                   </li>
@@ -198,12 +198,14 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="https://kevstar0.github.io/Services.html"
+                      href="http://kevstar0.github.io/Services.html"
                       >services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="https://kevstar0.io/Shop.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="http://kevstar0.io/Shop.html"
                       >Shop</a
                     >
                   </li>
