--- a/pages/Home.html
+++ b/pages/Home.html
@@ -205,7 +205,7 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="http://kevstar0.io/Shop.html"
+                      href="http://kevstar0.github.io/Shop.html"
                       >Shop</a
                     >
                   </li>
