nav fucking work already!

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -114,7 +114,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="http://kevstar0.github.io/About.html"
+                  href="./About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -186,7 +186,7 @@
                   <li class="u-nav-item">
                     <a
                       class="u-button-style u-nav-link"
-                      href="http://kevstar0.github.io/About"
+                      href="./About.html"
                       >About</a
                     >
                   </li>
