--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,8 @@
     <title>About Pablo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <meta name="keywords" content="About Us" />
-    <meta name="description" content="" />
+    <meta name="keywords" content="Smart ecosystem" />
+    <meta name="description" content="About smart world" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <link rel="stylesheet" href="nicepage.css" media="screen" />
     <link rel="stylesheet" href="About.css" media="screen" />
