re-organsing to fix nav

--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -68,7 +68,7 @@
                 u-text-active-palette-1-base
                 u-text-hover-palette-2-base
               "
-              href="./About.html"
+              href=""
               style="padding: 4px 14px; font-size: calc(1em + 8px)"
             >
               <svg><use xlink:href="#menu-hamburger"></use></svg>
@@ -114,7 +114,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./About.html"
+                  href="../About.html"
                   style="padding: 10px 20px"
                   >About</a
                 >
@@ -127,7 +127,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Contact.html"
+                  href="../Contact.html"
                   style="padding: 10px 20px"
                   >Contact</a
                 >
@@ -153,7 +153,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="http://kevstar0.io/Shop.html"
+                  href="../Shop.html"
                   style="padding: 10px 20px"
                   >Shop</a
                 >
@@ -184,28 +184,22 @@
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="./About.html"
+                    <a class="u-button-style u-nav-link" href="../About.html"
                       >About</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Contact.html"
+                    <a class="u-button-style u-nav-link" href="../Contact.html"
                       >Contact</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="http://kevstar0.github.io/Services.html"
+                    <a class="u-button-style u-nav-link" href="../Services.html"
                       >services</a
                     >
                   </li>
                   <li class="u-nav-item">
-                    <a
-                      class="u-button-style u-nav-link"
-                      href="http://kevstar0.github.io/Shop.html"
+                    <a class="u-button-style u-nav-link" href="../Shop.html"
                       >Shop</a
                     >
                   </li>
@@ -241,7 +235,7 @@
         or our database it'll ask you if it should search for it, download &
         install it for you!
         <a
-          href="./services.html"
+          href="../services.html"
           class="
             u-border-1
             u-border-active-palette-2-light-3
