--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -7,18 +7,18 @@
     <meta name="description" content="" />
     <meta name="page_type" content="np-template-header-footer-from-plugin" />
     <title>Home</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen" />
-    <link rel="stylesheet" href="Home.css" media="screen" />
+    <link rel="stylesheet" href="../nicepage.css" media="screen" />
+    <link rel="stylesheet" href="./Home.css" media="screen" />
     <script
       class="u-script"
       type="text/javascript"
-      src="jquery-1.9.1.min.js"
+      src="../jquery-1.9.1.min.js"
       defer=""
     ></script>
     <script
       class="u-script"
       type="text/javascript"
-      src="nicepage.js"
+      src="../nicepage.js"
       defer=""
     ></script>
     <link
