--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -48,10 +48,7 @@
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-          <img
-            src="../pages/images/logo.png"
-            class="u-logo-image u-logo-image-1"
-          />
+          <img src="../images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -274,7 +271,7 @@
         class="u-expanded-width u-shape u-shape-rectangle u-white u-shape-1"
       ></div>
       <img
-        src="images/hhhh.jpg"
+        src="../images/hhhh.jpg"
         class="u-align-left u-image u-image-1"
         data-image-width="1200"
         data-image-height="801"
@@ -402,7 +399,7 @@
               </div>
               <h5 class="u-text u-text-6">Smart schools</h5>
               <a
-                href="./About.html"
+                href="../About.html"
                 class="
                   u-active-none
                   u-border-2
