link fxes on all pages

--- a/pages/Contact.html
+++ b/pages/Contact.html
@@ -44,10 +44,7 @@
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="./Home.html" class="u-image u-logo u-image-1">
-          <img
-            src="../pages/images/logo.png"
-            class="u-logo-image u-logo-image-1"
-          />
+          <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -97,7 +94,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="Home.html"
+                  href="./dedicated/Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -175,7 +172,9 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./dedicated/Home.html"
                       >Home</a
                     >
                   </li>
@@ -241,7 +240,7 @@
               >
               <input
                 type="email"
-                placeholder="kevinmanda92@outlook.com"
+                placeholder="enter your email address"
                 id="email-f82f"
                 name="email"
                 class="
