--- a/pages/about.html
+++ b/pages/about.html
@@ -43,10 +43,7 @@
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="./Home.html" class="u-image u-logo u-image-1">
-          <img
-            src="../pages/images/logo.png"
-            class="u-logo-image u-logo-image-1"
-          />
+          <img src="./images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div
@@ -96,7 +93,7 @@
                     u-text-active-palette-1-base
                     u-text-hover-palette-2-base
                   "
-                  href="./Home.html"
+                  href="./dedicated/Home.html"
                   style="padding: 10px 20px"
                   >Home</a
                 >
@@ -174,7 +171,9 @@
                   "
                 >
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="./Home.html"
+                    <a
+                      class="u-button-style u-nav-link"
+                      href="./dedicated/Home.html"
                       >Home</a
                     >
                   </li>
@@ -258,9 +257,10 @@
                   <p class="u-text u-text-2">
                     Focused into driving this world into an automated world<br />
                     service delivery is a big factor for companies and
-                    productivity is just a dream when the "system is down"<br />.<br />
+                    productivity is just a dream when the "system is down". Take
+                    a look at my services<br />.<br />
                   </p>
-                  <a href="" class="u-btn u-button-style u-btn-1">Twitter</a>
+                  <a href="" class="u-btn u-button-style u-btn-1">Services</a>
                 </div>
               </div>
             </div>
