--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -47,7 +47,7 @@
   <body class="u-body">
     <header class="u-clearfix u-header u-header" id="sec-a427">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1">
+        <a href="" class="u-image u-logo u-image-1">
           <img src="../images/logo.png" class="u-logo-image u-logo-image-1" />
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
