removed irrelavant URL

--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -204,11 +204,11 @@
       id="carousel_0422"
     >
       <h1 class="u-custom-font u-font-montserrat u-text u-text-1">
-        What Does it do?
+        What does it do?
       </h1>
       <p class="u-text u-text-2">
         I am probably one of the laziest people on earth, I love enjoying my
-        time on coding, music and binge anime. so i made this website which I
+        time on coding, music and binge anime. so I made this website which I
         personally use whenever I have to do something, summon any internet
         services, order food online, research or even command your device to
         open a specific app/ webpage. if the app is not available on your device
@@ -313,7 +313,7 @@
               </div>
               <h5 class="u-text u-text-4">Smart houses</h5>
               <a
-                href="https://nicepage.com/c/product-list-html-templates"
+                href=""
                 class="
                   u-active-none
                   u-border-2
@@ -380,7 +380,7 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-6">Smart schools</h5>
+              <h5 class="u-text u-text-6">Smart schools & businesses</h5>
               <a
                 href="../About.html"
                 class="
@@ -449,9 +449,9 @@
                   </h1>
                 </div>
               </div>
-              <h5 class="u-text u-text-8">AI driven country</h5>
+              <h5 class="u-text u-text-8">Auto life for everyone</h5>
               <a
-                href="https://nicepage.com/k/adult-html-templates"
+                href=""
                 class="
                   u-active-none
                   u-border-2
@@ -520,7 +520,7 @@
               </div>
               <h5 class="u-text u-text-10">Job oppotunities with us</h5>
               <a
-                href="https://nicepage.com/c/slider-html-templates"
+                href=""
                 class="
                   u-active-none
                   u-border-2
@@ -596,7 +596,7 @@
                 <div class="u-container-layout u-container-layout-2">
                   <span
                     class="u-icon u-icon-circle u-text-palette-1-base u-icon-1"
-                    data-href="--#--"
+                    data-href=""
                     ><svg
                       class="u-svg-link"
                       preserveAspectRatio="xMidYMin slice"
