--- a/pages/dedicated/Home.html
+++ b/pages/dedicated/Home.html
@@ -229,8 +229,8 @@
             u-btn-1
           "
           >It is worth it. Try it!</a
-        >. With the power of HTML5 & CSS these 2 combined language allows me to
-        service you and simultaneiously entertain you! how cool.<br />
+        >. With the power of HTML5 & CSS these 2 combined computing languages
+        allows me to service you and simultaneiously entertain you! how cool.<br />
         <br />Image from
         <a
           href="https://freepik.com/photos/people"
